--- a/src/app/app-common/header/header.component.html
+++ b/src/app/app-common/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 headerPos">
     <div class="row navBarSet">
       <div class="col-xs-6 col-md-2 col-sm-6 col-lg-1">
-        <img class="logoImg img-responsive" src="assets/images/University_logo.svg" alt="Logo">
+        <img class="logoImg img-responsive" src="../assets/images/University_logo.svg" alt="Logo">
       </div>
       <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 ">
         <span class="setBrandNameStyle">University.social Dashboard</span>
