--- a/src/app/entry/register/register.component.html
+++ b/src/app/entry/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row setInputHeight">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-      <img src="assets/images/University_logo.svg" alt="">
+      <img src="../assets/images/University_logo.svg" alt="">
     </div>
   </div>
   <div class="row setInputHeight">
